--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <li>Cryptography</li>
               <li>Security & Risks Management</li>
               <li>Network Security</li>
-              <li>Privacy Preserving Technologies & Security in AI</li>
 		<li>Forensics</li>
+ <li>Privacy Preserving Technologies & Security in AI</li>
             </ul>
 		<p><b>Clubs & Societies:</b></p>
 <ul>
@@ -708,176 +708,105 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <div class="container">
     <div class="row">
 
-      <!-- IRAS Silver Award Card -->
-      <div class="col s6">
+      <!-- Card Template Example -->
+      <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
-                 style="max-height: 140px; object-fit: contain;">
+            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award" style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                IRAS Silver Award
-              </span>
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">IRAS Silver Award</span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> SIM-UOW Graduation Ceremony
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> April 2024
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> SIM Global Education
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Awarded for graduating <strong>2nd in the B.CompSc (Cyber Security)</strong> cohort among hundreds of graduands.
-              </p>
-              <p style="font-size: 1rem;">
-                <a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">
-                  View official e-booklet &#8594;
-                </a>
-              </p>
+              <p style="font-size: 1.1rem;"><strong>Event:</strong> SIM-UOW Graduation Ceremony</p>
+              <p style="font-size: 1.1rem;"><strong>Date:</strong> April 2024</p>
+              <p style="font-size: 1.1rem;"><strong>Location:</strong> SIM Global Education</p>
+              <p style="font-size: 1rem; color: #616161;">Awarded for graduating <strong>2nd in the B.CompSc (Cyber Security)</strong> cohort among hundreds of graduands.</p>
+              <p style="font-size: 1rem;"><a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">View official e-booklet &#8594;</a></p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Dean's Merit Award 2022 Card -->
-      <div class="col s6">
+      <!-- Dean's Merit Award -->
+      <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
-                 style="max-height: 140px; object-fit: contain;">
+            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022" style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Dean's Merit Award
-              </span>
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">Dean's Merit Award</span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> March 2023
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> SIM Global Education
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Awarded to students in the <strong>top 5% of their faculty</strong> who achieved a <strong>Weighted Average Mark (WAM) of 85 or above</strong> in an academic year.
-              </p>
+              <p style="font-size: 1.1rem;"><strong>Event:</strong> Dean's Merit Award Presentation Ceremony</p>
+              <p style="font-size: 1.1rem;"><strong>Date:</strong> March 2023</p>
+              <p style="font-size: 1.1rem;"><strong>Location:</strong> SIM Global Education</p>
+              <p style="font-size: 1rem; color: #616161;">Awarded to students in the <strong>top 5% of their faculty</strong> who achieved a <strong>WAM of 85 or above</strong> in an academic year.</p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Lucky Draw Winner: STANDCON 2022 -->
-      <div class="col s6">
+      <!-- Lucky Draw Winner -->
+      <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022"
-                 style="max-height: 140px; object-fit: contain;">
+            <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022" style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Lucky Draw Winner
-              </span>
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">Lucky Draw Winner</span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> N0H4TS STANDCON 2022 Prize Giving Ceremony 
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> July 2022
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> ASEAN-Singapore Cybersecurity Centre of Excellence (ASCCE)
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Awarded to a few participants, chosen by lucky draw from among the most active in the STANDCON 2022 CTF competition.
-              </p>
+              <p style="font-size: 1.1rem;"><strong>Event:</strong> N0H4TS STANDCON Prize Giving Ceremony</p>
+              <p style="font-size: 1.1rem;"><strong>Date:</strong> July 2022</p>
+              <p style="font-size: 1.1rem;"><strong>Location:</strong> ASCCE</p>
+              <p style="font-size: 1rem; color: #616161;">Awarded to a few participants chosen by lucky draw from among the most active in the STANDCON 2022 CTF competition.</p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- CSIT Challenge of Wits Week 3 -->
-      <div class="col s6">
+      <!-- CSIT Challenge of Wits -->
+      <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3"
-                 style="max-height: 140px; object-fit: contain;">
+            <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3" style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Grand Prize Winner
-              </span>
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">Grand Prize Winner</span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography Prize Collection
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> April 2022
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> Centre for Strategic Infocomm Technologies (CSIT)
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from among hundreds of participants for accurately solving the challenge.
-              </p>
-              <p style="font-size: 1rem;">
-                <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" class="teal-text text-darken-2">
-                  View LinkedIn post &#8594;
-                </a>
-              </p>
+              <p style="font-size: 1.1rem;"><strong>Event:</strong> CSIT Challenge of Wits Week 3</p>
+              <p style="font-size: 1.1rem;"><strong>Date:</strong> April 2022</p>
+              <p style="font-size: 1.1rem;"><strong>Location:</strong> CSIT HQ</p>
+              <p style="font-size: 1rem; color: #616161;">Won grand prize for <strong>Cyber Forensics & Cryptography</strong> challenge, selected from hundreds of participants.</p>
+              <p style="font-size: 1rem;"><a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" class="teal-text text-darken-2">View LinkedIn post &#8594;</a></p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- AiSP Singapore Cyber Day 2021 -->
-      <div class="col s6">
+      <!-- AiSP Singapore Cyber Day -->
+      <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/AISP.jpg" alt="AISP Singapore Cyber Day 2021 Quiz"
-                 style="max-height: 140px; object-fit: contain;">
+            <img src="/assets/img/AISP.jpg" alt="AISP Singapore Cyber Day 2021 Quiz" style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Top 3 Winner
-              </span>
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">Top 3 Winner</span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> AiSP Singapore Cyber Day Quiz Prize Presentation
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> February 2022
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> Fortinet Singapore Pte Ltd
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Placed in the Top 3 of AiSP's national cyber quiz for youth (25 and below), recognized for cyber knowledge and situational awareness. Top 3 Winners’ parents were also invited to the award ceremony.
-              </p>
-              <p style="font-size: 1rem;">
-                <a href="https://www.facebook.com/photo/?fbid=4858659787555875&set=a.4858764924212028" target="_blank" class="teal-text text-darken-2">
-                  View Facebook post &#8594;
-                </a>
-              </p>
-              <p style="font-size: 1rem;">
-                <a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter%202022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">
-                  View AiSP Newsletter &#8594;
-                </a>
-              </p>
+              <p style="font-size: 1.1rem;"><strong>Event:</strong> AiSP Cyber Day Quiz Prize Presentation</p>
+              <p style="font-size: 1.1rem;"><strong>Date:</strong> February 2022</p>
+              <p style="font-size: 1.1rem;"><strong>Location:</strong> Fortinet Singapore</p>
+              <p style="font-size: 1rem; color: #616161;">Placed Top 3 in AiSP's national cyber quiz for youth. Recognized for cyber knowledge and situational awareness.</p>
+              <p style="font-size: 1rem;"><a href="https://www.facebook.com/photo/?fbid=4858659787555875&set=a.4858764924212028" target="_blank" class="teal-text text-darken-2">View Facebook post &#8594;</a></p>
+              <p style="font-size: 1rem;"><a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter%202022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">View AiSP Newsletter &#8594;</a></p>
             </div>
           </div>
         </div>
@@ -886,9 +815,6 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
 </section>
-
-
-
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
