add in PUB exp draft

--- a/index.html
+++ b/index.html
@@ -240,24 +240,52 @@ PUB, Singapore's National Water Agency</a></span>
               </div>
             </div>
      <div class="card-action">
-            <span> Cybersecurity Analyst | May 2024 - Present </span>
+            <span> Cybersecurity Analyst (Security Architecture & Testing) | May 2024 - Present </span>
           </div>
-            <ul>
-              <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
-              </li>
-              <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
-              </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, MongoDB
-              </li>
-            </ul>
-          </div>
-        </div>
+             <ul>
+      <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
+      <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
+      <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
+      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender and managed contract extensions for GovTech VMS</li>
+      <li>Coordinated and scheduled over 100 VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
+      <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
+      <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
+      <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards</li>
+      <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
+      <li>Created and maintained asset tags, vulnerability whitelist rules, and severity recastings in GovTech VMS</li>
+      <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
+      <li>Raised application gateway IP whitelisting requests to enable VAPT reachability</li>
+      <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
+      <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
+      <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
+      <li>Delivered threat hunting insights using SPLUNK, Arkime, ELK Stack, Windows Event Logs, and Sysmon logs; applied PEAK framework and KC7</li>
+      <li>Used STRIDE-LM and M3TID for threat modeling and risk prioritization</li>
+      <li>Reviewed mobile, cloud, web, and network systems under VAPT scope; used tools such as Burp Suite and Kape for assessments</li>
+      <li>Onboarded sensitive and internet-facing systems to GovTech VMS via askGovTech platform and raised cybersecurity inquiries</li>
+      <li>Served as cybersecurity consultant for system owners, providing guidance on IM8, offshoring, and third-party risk</li>
+      <li>Reviewed IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
+      <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
+      <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li>
+      <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
+      <li>Attended cybersecurity events including CIDeX 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
+      <li>Collaborated with Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP)</li>
+      <li>Optimized IT/OT specifications to comply with IM8 Reform and CCoP policies</li>
+      <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
+      <li>Tools and Frameworks:</li>
+      <ul>
+        <li><strong>Security Platforms:</strong> Microsoft Sentinel, Defender for Endpoint, Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security</li>
+        <li><strong>AI Tools:</strong> PairChat, AiBots, GenAI, CO-STAR framework</li>
+        <li><strong>Threat Intelligence:</strong> MITRE ATT&CK (ICS, Enterprise), STRIDE-LM, M3TID, PEAK, KC7</li>
+        <li><strong>Log Analysis:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon</li>
+        <li><strong>Security Tools:</strong> Tenable Nessus, Burp Suite, Kape, zConsole (MTD), VirusTotal</li>
+        <li><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), CCoP, GoMAX</li>
+        <li><strong>Automation & Productivity:</strong> Power Automate, Plumber, SharePoint (Portal Creation), Microsoft Visio, Microsoft Excel</li>
+        <li><strong>Development & Review:</strong> Architecture Diagrams, BIA Forms, Source Code Reviews, DRM Analysis</li>
+        <li><strong>Cybersecurity Certifications:</strong> CompTIA Security+, CRISC, CISSP</li>
+      </ul>
+    </ul>
+  </div>
+</div>
  
         <div class="card">
           <div class="card-content">
