corrected PUB exp

--- a/index.html
+++ b/index.html
@@ -271,19 +271,18 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Collaborated with Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP)</li>
       <li>Optimized IT/OT specifications to comply with IM8 Reform and CCoP policies</li>
       <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
-      <li>Tools and Frameworks:</li>
-      <ul>
-        <li><strong>Security Platforms:</strong> Microsoft Sentinel, Defender for Endpoint, Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security</li>
-        <li><strong>AI Tools:</strong> PairChat, AiBots, GenAI, CO-STAR framework</li>
-        <li><strong>Threat Intelligence:</strong> MITRE ATT&CK (ICS, Enterprise), STRIDE-LM, M3TID, PEAK, KC7</li>
-        <li><strong>Log Analysis:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon</li>
-        <li><strong>Security Tools:</strong> Tenable Nessus, Burp Suite, Kape, zConsole (MTD), VirusTotal</li>
-        <li><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), CCoP, GoMAX</li>
-        <li><strong>Automation & Productivity:</strong> Power Automate, Plumber, SharePoint (Portal Creation), Microsoft Visio, Microsoft Excel</li>
-        <li><strong>Development & Review:</strong> Architecture Diagrams, BIA Forms, Source Code Reviews, DRM Analysis</li>
-        <li><strong>Cybersecurity Certifications:</strong> CompTIA Security+, CRISC, CISSP</li>
-      </ul>
-    </ul>
+</ul>
+<p><b>Tools and Frameworks:</b></p>
+<p><strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security</p>
+<p><strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber</p>
+<p><strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain</p>
+<p><strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs</p>
+<p><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network)</p>
+<p><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance</p>
+<p><strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework</p>
+<p><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium)</p>
+<p><strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz</p>
+
   </div>
 </div>
  
