--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Used STRIDE-LM and M3TID for threat modeling and risk prioritization</li>
       <li>Reviewed mobile, cloud, web, and network systems under VAPT scope; used tools such as Burp Suite and Kape for assessments</li>
       <li>Onboarded sensitive and internet-facing systems to GovTech VMS via askGovTech platform and raised cybersecurity inquiries</li>
+<li>Proactively identified cloud service resources in Microsoft Azure for Cloud VA and obtained system subscription information from Azure Portal resources for VMS onboarding process</li>
       <li>Served as cybersecurity consultant for system owners, providing guidance on IM8, offshoring, and third-party risk</li>
       <li>Reviewed IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
@@ -272,16 +273,16 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Optimized IT/OT specifications to comply with IM8 Reform and CCoP policies</li>
       <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
 </ul>
-<p><b>Tools and Frameworks:</b></p>
-<p><strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security</p>
-<p><strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber</p>
-<p><strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain</p>
-<p><strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs</p>
-<p><strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network)</p>
-<p><strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance</p>
-<p><strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework</p>
-<p><strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium)</p>
-<p><strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz</p>
+<b>Tools and Frameworks:</b>
+<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security
+<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber
+<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain
+<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs
+<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network)
+<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance
+<strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework
+<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium)
+<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz
 
   </div>
 </div>
