--- a/index.html
+++ b/index.html
@@ -275,15 +275,16 @@ PUB, Singapore's National Water Agency</a></span>
 
  <li>
 <b>Tools and Frameworks:</b>
-<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security
-<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber
-<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain
-<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs
-<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network)
-<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance
-<strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework
-<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium)
-<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz
+<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
+<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber<br>
+<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
+<strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
+<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network) <br>
+<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance <br>
+<strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
+<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium) <br>
+<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz <br>
+</li>
 </ul>
   </div>
 </div>
