fix final format for pub exp

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
 
  <li>
-<b>Tools and Frameworks:</b>
+<b>Tools and Frameworks:</b> <br>
 <strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
@@ -282,8 +282,9 @@ PUB, Singapore's National Water Agency</a></span>
 <strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network) <br>
 <strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance <br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
-<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), BIA Forms, Architecture Diagrams, Source Code Reviews, DRM Solutions (Vitrium) <br>
+<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium) <br>
 <strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz <br>
+<!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
 </ul>
   </div>
