update pub exp wordings

--- a/index.html
+++ b/index.html
@@ -244,34 +244,34 @@ PUB, Singapore's National Water Agency</a></span>
           </div>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
+<li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
-      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender and managed contract extensions for GovTech VMS</li>
-      <li>Coordinated and scheduled over 100 VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
+      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender and managed contract extensions for GovTech Vulnerability Management System</li>
+      <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
       <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
       <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards</li>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
-      <li>Created and maintained asset tags, vulnerability whitelist rules, and severity recastings in GovTech VMS</li>
+      <li>Created and maintained asset tags, vulnerability whitelist rules, and recast rules in GovTech VMS</li>
       <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
-      <li>Raised application gateway IP whitelisting requests to enable VAPT reachability</li>
+      <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall to enable secure reachability to target environments.</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
       <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
-      <li>Delivered threat hunting insights using SPLUNK, Arkime, ELK Stack, Windows Event Logs, and Sysmon logs; applied PEAK framework and KC7</li>
-      <li>Used STRIDE-LM and M3TID for threat modeling and risk prioritization</li>
-      <li>Reviewed mobile, cloud, web, and network systems under VAPT scope; used tools such as Burp Suite and Kape for assessments</li>
+      <li>Delivered threat hunting insights using SPLUNK, Arkime, ELK Stack, Windows Event Logs, and Sysmon logs</li>
+      <li>Adopted STRIDE-LM and M3TID to systematically identify, model, and prioritize cybersecurity threats in risk assessments</li>
+      <li>Conducted reviews of third-party VAPT reports (cloud VA, mobile PT, web PT, network PT), assessing findings derived from tools like Burp Suite, Wireshark, and Nessus</li>
       <li>Onboarded sensitive and internet-facing systems to GovTech VMS via askGovTech platform and raised cybersecurity inquiries</li>
 <li>Proactively identified cloud service resources in Microsoft Azure for Cloud VA and obtained system subscription information from Azure Portal resources for VMS onboarding process</li>
-      <li>Served as cybersecurity consultant for system owners, providing guidance on IM8, offshoring, and third-party risk</li>
-      <li>Reviewed IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
+      <li>Served as cybersecurity consultant to system managers, offering guidance across areas such as IM8, offshoring, third-party risk management, and audit regimes</li>
+      <li>Reviewed all IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
-      <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li>
+    <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
+      <li>Attended cybersecurity events including CIDeX training 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
       <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
-      <li>Attended cybersecurity events including CIDeX 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
-      <li>Collaborated with Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP)</li>
-      <li>Optimized IT/OT specifications to comply with IM8 Reform and CCoP policies</li>
-      <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
+      <li>Collaborated with GovTech on Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP)</li>
+      <li>Continuously updated and optimized IT/OT specifications to ensure compliance with IM8 Reform and CCoP policies</li>
 
  <li>
 <b>Tools and Frameworks:</b> <br>
