--- a/index.html
+++ b/index.html
@@ -738,9 +738,44 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <h3 class="page-title white-text teal">Achievements</h3>
   <div class="container">
 
-    <!-- Row 1 -->
+<!-- NTU Msc in Cyber Security 
     <div class="row">
+      <div class="col s12 m6">
+        <div class="card hoverable" style="margin-bottom: 30px;">
+          <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
+            <img src="/assets/img/gradpic.jpeg" alt="NTU Msc in Cyber Security"
+              style="max-height: 140px; object-fit: contain;">
+          </div>
+          <div class="card-content">
+            <div class="center-align">
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+                MSc. in Cyber Security
+              </span>
+            </div>
+            <div class="left-align" style="margin-top: 15px;">
+              <p style="font-size: 1.1rem;">
+                <strong>Event:</strong> NTU Graduation Ceremony
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Date:</strong> July 2026
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Location:</strong> Nanyang Technological University
+              </p>
+              <p style="font-size: 1rem; color: #616161;">
+                Awarded for graduating <strong>in the MSc in Cyber Security</strong> from Nanyang Technological University</p>
+              <p style="font-size: 1rem;">
+                <a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">
+                  View official e-booklet &#8594;
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div> -->
 
+  <!-- Row 1 -->
+    <div class="row">
       <!-- IRAS Silver Award Card -->
       <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
