--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@ PUB, Singapore's National Water Agency</a></span>
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" /><br />
-<span class="new badge green" data-badge-caption="Advanced"></span> 
-Python
+                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
+
+ <p>Python</p>
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
