add in java lang

--- a/index.html
+++ b/index.html
@@ -348,6 +348,14 @@ PUB, Singapore's National Water Agency</a></span>
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
 
  <p>Python</p>
+<div class="col s4 m2">
+                <img alt="" src="/assets/img/Java_(programming_language)-Logo.png" class="responsive-img" />Java
+              </div>
+<div class="col s4 m2">
+                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+              </div>
+
+
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
@@ -358,12 +366,8 @@ PUB, Singapore's National Water Agency</a></span>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+              
+              
             </div>
           </div>
         </div>
