--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@ PUB, Singapore's National Water Agency</a></span>
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
+                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
 
- <p>Python</p>
+  </div>
 <div class="col s4 m2">
                 <img alt="" src="/assets/img/Java_(programming_language)-Logo.png" class="responsive-img" />Java
               </div>
