add in OSINT to skills

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ PUB, Singapore's National Water Agency</a></span>
                 <img alt="" src="/assets/img/Java_(programming_language)-Logo.png" class="responsive-img" />Java
               </div>
 <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Bash
               </div>
    <div class="col s4 m2">
                 <img alt="" src="/assets/img/autoit-logo-png_seeklogo-272839.png" class="responsive-img" />AutoIt
@@ -362,11 +362,24 @@ PUB, Singapore's National Water Agency</a></span>
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
-              </div>
                         
             </div>
           </div>
         </div>
+
+    <!-- OSINT -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">🔍 OSINT</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/Shodan.png" class="responsive-img"><p>Shodan</p></div>
+          <div class="col s4 m2"><img src="/assets/img/Maltego.jpeg" class="responsive-img"><p>Maltego</p></div>
+          <div class="col s4 m2"><img src="/assets/img/recon-ng.png" class="responsive-img"><p>Recon-ng</p></div> 
+          <div class="col s4 m2"><img src="/assets/img/virustotal_logo.jpg" class="responsive-img"><p>VirusTotal</p></div>
+          <div class="col s4 m2"><img src="/assets/img/sublist3r.png" class="responsive-img"><p>Sublist3r</p></div>
+        </div>
+      </div>
+    </div>
 
         <div class="card">
           <div class="card-content">
